# jax-llm

./: LICENSE  README.md  pyproject.toml
src/jax_llm/: __init__.py  dataloader.py  generate.py  gpt_train.py  model.py  multihead_attention.py  nanolm.ipynb  nanolm.py  prepare_aozora.py  prepare_shakespere.py  prepare_wiki_ja_featured.py  prepare_wiki_ja_good.py  prepare_wikisplit-pp.py  previous_chapters.py  test_tokenizer.py  train.py  train_data_parallel.py  train_tokenizer.py  utils.py
src/jax_llm/multi-gpu-example/: data_parallel_intro.py
