[project]
name = "jax-llm"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "speed1313", email = "speedtry13@icloud.com" }
]
dependencies = [
    "jax[cpu]>=0.4.13",
    "torch>=2.3.0",
    "matplotlib>=3.7.5",
    "tqdm>=4.66.4",
    "tiktoken>=0.6.0",
    "flax>=0.7.2",
    "tensorflow>=2.13.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.3",
]

[tool.hatch.metadata]
allow-direct-references = true
