[project]
name = "jax-llm"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "speed1313", email = "speedtry13@icloud.com" }
]
dependencies = [
    "torch>=2.3.0",
    "matplotlib>=3.7.5",
    "tqdm>=4.66.4",
    "tiktoken>=0.6.0",
    "flax>=0.7.2",
    "optax>=0.1.8",
    "pip>=24.0",
    "ipykernel>=6.29.4",
    "datasets>=2.19.1",
    "tokenizers>=0.19.1",
    "click>=8.1.7",
    "jax[cuda12]>=0.4.13",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.3",
    "pytest>=8.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true
